Embed MealView in its own Navigation Controller to give it a nav bar

--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                     <navigationItem key="navigationItem" title="Your Meals" id="qbi-Vf-Pd0">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="w1v-6u-dsY">
                             <connections>
-                                <segue destination="BYZ-38-t0r" kind="presentation" identifier="AddItem" id="0y3-Sa-s6q"/>
+                                <segue destination="BWU-C0-fvt" kind="presentation" identifier="AddItem" id="0y3-Sa-s6q"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -82,7 +82,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="eJK-9p-XmP">
-                                <rect key="frame" x="16" y="40" width="339" height="429"/>
+                                <rect key="frame" x="16" y="84" width="339" height="429"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter meal name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nhC-Bj-cHq">
                                         <rect key="frame" x="0.0" y="0.0" width="339" height="30"/>
@@ -117,6 +117,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="14q-QR-KZK"/>
                     <connections>
                         <outlet property="nameTextField" destination="nhC-Bj-cHq" id="4Sw-Pr-eJ6"/>
                         <outlet property="photoImageView" destination="Fa8-fO-DI6" id="hgL-oL-Sgc"/>
@@ -130,7 +131,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="479.19999999999999" y="133.5832083958021"/>
+            <point key="canvasLocation" x="1244" y="133"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Q90-Pn-eRK">
@@ -149,6 +150,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mzj-M3-rd5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1062" y="134"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Tax-VD-gix">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BWU-C0-fvt" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ue2-Xs-y0w">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="r79-nY-G6Q"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hTv-mn-wpi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="478.39999999999998" y="133.13343328335833"/>
         </scene>
     </scenes>
     <resources>
